MOS-30303 : intermittent commit6
Former-commit-id: 5f279c1e7634255a56fce1d7e845b8b15d52a405
Former-commit-id: be40cbc17c3bb2f4aefc54e14640082809feb1a9

--- a/resident/resident-service/src/test/resources/application.properties
+++ b/resident/resident-service/src/test/resources/application.properties
@@ -1,4 +1,179 @@
-#---------------------------Service URLs---------------------------------
-moisp.ida-url=https://dev.mosip.io/v1/authmanager/user
-moisp.regproc-url=https://dev.mosip.io/v1/authmanager/user
-mosip.kernel.emailnotifier-url=https://dev.mosip.io/v1/emailnotifier/email/send
+#--------------ID and Version --------------
+auth.internal.id=mosip.identity.auth.internal
+auth.internal.version=1.0
+mosip.registration.processor.print.id=mosip.registration.print
+mosip.registration.processor.application.version=1.0
+vid.create.id=mosip.vid.create
+resident.vid.version=v1
+resident.vid.id=mosip.resident.vid
+
+mosip.primary-language=eng
+mosip.secondary-language=fra
+mosip.notification.language-type=both
+resident.notification.emails=girish.yarru@mindtree.com
+resident.notification.message=Notification has been sent to the provided contact detail(s)
+config.server.file.storage.uri=http://localhost:8081
+registration.processor.identityjson=null
+
+resident.authlock.id=mosip.resident.authlock
+resident.checkstatus.id=mosip.resident.checkstatus
+resident.euin.id=mosip.resident.euin
+resident.printuin.id=mosip.resident.printuin
+resident.uin.id=mosip.resident.uin
+resident.rid.id=mosip.resident.rid
+resident.updateuin.id=mosip.resident.updateuin
+resident.authunlock.id=mosip.resident.authunlock
+resident.authhistory.id=mosip.resident.authhistory
+mosip.resident.service.status.check.id=mosip.registration.status
+mosip.resident.service.status.check.version=1.0
+resident.datetime.pattern=yyyy-MM-dd'T'HH:mm:ss.SSS'Z'
+auth.types.allowed=otp,bio-FIR,bio-IIR,bio-FACE
+resident.center.id=10008
+resident.machine.id=20007
+
+#-----------------------------RID Properties---------------------------------------
+# length of the rid
+mosip.kernel.rid.length=29
+# length of the timestamp
+mosip.kernel.rid.timestamp-length=14
+# rid sequence max digits
+mosip.kernel.rid.sequence-length=5
+
+# Upper bound of number of digits in sequence allowed in id. For example if
+# limit is 3, then 12 is allowed but 123 is not allowed in id (in both
+# ascending and descending order)
+mosip.kernel.tokenid.sequence-limit=3
+
+#-----------------------------VID Properties--------------------------------------
+# length of the vid
+mosip.kernel.vid.length=16
+
+# Upper bound of number of digits in sequence allowed in id. For example if
+# limit is 3, then 12 is allowed but 123 is not allowed in id (in both
+# ascending and descending order)
+# to disable sequence limit validation assign 0 or negative value
+mosip.kernel.vid.length.sequence-limit=3
+
+# Number of digits in repeating block allowed in id. For example if limit is 2,
+# then 4xxx4 is allowed but 48xxx48 is not allowed in id (x is any digit)
+# to disable repeating block validation assign 0 or negative value
+mosip.kernel.vid.length.repeating-block-limit=2
+
+
+# Lower bound of number of digits allowed in between two repeating digits in
+# id. For example if limit is 2, then 11 and 1x1 is not allowed in id (x is any digit)
+# to disable repeating limit validation, assign 0  or negative value
+mosip.kernel.vid.length.repeating-limit=2
+
+# list of number that id should not be start with
+# to disable null
+mosip.kernel.vid.not-start-with=0,1
+
+#restricted numbers for vid
+mosip.kernel.vid.restricted-numbers=786,666
+
+#-----------------------------UIN Properties--------------------------------------
+#length of the uin
+mosip.kernel.uin.length=10
+#minimum threshold of unused uin
+mosip.kernel.uin.min-unused-threshold=200000
+#number of uins to generate
+mosip.kernel.uin.uins-to-generate=500000
+#restricted numbers for uin
+mosip.kernel.uin.restricted-numbers=786,666
+
+# Upper bound of number of digits in sequence allowed in id. For example if
+# limit is 3, then 12 is allowed but 123 is not allowed in id (in both
+# ascending and descending order)
+# to disable sequence limit validation assign 0 or negative value
+mosip.kernel.uin.length.sequence-limit=3
+
+# Number of digits in repeating block allowed in id. For example if limit is 2,
+# then 4xxx4 is allowed but 48xxx48 is not allowed in id (x is any digit)
+#to disable validation assign zero or negative value
+mosip.kernel.uin.length.repeating-block-limit=2
+
+# Lower bound of number of digits allowed in between two repeating digits in
+# id. For example if limit is 2, then 11 and 1x1 is not allowed in id (x is any digit)
+# to disable repeating limit validation, assign 0  or negative value
+mosip.kernel.uin.length.repeating-limit=2
+
+#reverse group digit limit for uin filter
+mosip.kernel.uin.length.reverse-digits-limit=5
+
+#group digit limit for uin filter
+mosip.kernel.uin.length.digits-limit=5
+
+#should not start with
+mosip.kernel.uin.not-start-with=0,1
+
+#adjacent even digit limit for uin filter
+mosip.kernel.uin.length.conjugative-even-digits-limit=3
+mosip.kernel.crypto.asymmetric-algorithm-name=RSA/ECB/OAEPWITHSHA-256ANDMGF1PADDING
+#Crypto symmetric algorithm name
+mosip.kernel.crypto.symmetric-algorithm-name=AES/GCM/PKCS5Padding
+#Keygenerator asymmetric algorithm name
+mosip.kernel.keygenerator.asymmetric-algorithm-name=RSA
+#Keygenerator symmetric algorithm name
+mosip.kernel.keygenerator.symmetric-algorithm-name=AES
+#Asymmetric algorithm key length
+mosip.kernel.keygenerator.asymmetric-key-length=2048
+#Symmetric algorithm key length
+mosip.kernel.keygenerator.symmetric-key-length=256
+#Keygenerator symmetric algorithm name
+# keygenerator asymmetric algorithm name
+#Encrypted data and encrypted symmetric key separator
+mosip.kernel.data-key-splitter=#KEY_SPLITTER#
+#GCM tag length
+mosip.kernel.crypto.gcm-tag-length=128
+#Hash algo name
+mosip.kernel.crypto.hash-algorithm-name=PBKDF2WithHmacSHA512
+#Symmtric key length used in hash
+mosip.kernel.crypto.hash-symmetric-key-length=256
+#No of iterations in hash
+mosip.kernel.crypto.hash-iteration=100000
+#Sign algo name
+mosip.kernel.crypto.sign-algorithm-name=SHA512withRSA
+
+mosip.kernel.keymanager-service-publickey-url=${mosip.base.url}/v1/keymanager/publickey/{applicationId}
+mosip.kernel.keymanager-service-decrypt-url=${mosip.base.url}/v1/keymanager/decrypt
+mosip.kernel.keymanager-service-auth-decrypt-url=${mosip.base.url}/v1/keymanager/auth/decrypt
+mosip.kernel.keymanager-service-sign-url=${mosip.base.url}/v1/keymanager/sign
+mosip.sign.applicationid=KERNEL
+mosip.sign.refid=SIGN
+mosip.kernel.cryptomanager.request_id=CRYPTOMANAGER.REQUEST
+mosip.kernel.cryptomanager.request_version=v1.0
+mosip.kernel.signature.signature-request-id=SIGNATURE.REQUEST
+mosip.kernel.signature.signature-version-id=v1.0
+
+
+
+#-------------REMOVE THIS -------------------------------------------------------------
+#-------------TOKEN GENERATION----------------
+#Token generation request id
+token.request.id=io.mosip.resident
+#Token generation app id
+resident.appid=ida
+#Token generation version
+token.request.version=1.0
+# Kernel auth client ID for IDA
+resident.clientId=ida_app_user
+# Kernel auth secret key for IDA
+resident.secretKey=5debb60adbfcf8feea4a6ed6160092ec
+
+
+#------Temporary | remove this --------------------------
+regprc.appid=registrationprocessor
+regprc.clientId=regproc_app_user
+regprc.secretKey=80565e06e382d5e8b924123feb6ef43b
+
+
+#--------------URI--------------------------
+#Base url
+mosip.base.url=https://int.mosip.io
+#Auth Services
+KERNELAUTHMANAGER=${mosip.base.url}/v1/authmanager/authenticate/clientidsecretkey
+REGPROCPRINT=${mosip.base.url}/registrationprocessor/v1/print/uincard
+INTERNALAUTH=${mosip.base.url}/idauthentication/v1/internal/auth
+KERNELENCRYPTIONSERVICE=${mosip.base.url}/v1/keymanager/publickey
+IDAUTHCREATEVID=${mosip.base.url}/idrepository/v1/vid
