adding resident controller test
Former-commit-id: f6739f8306ca64039c963dc725ea5c901a9dfae9
Former-commit-id: cbac443d5c5f3119f362c3a3d869b58f283caba9

--- a/resident/resident-service/src/test/resources/application.properties
+++ b/resident/resident-service/src/test/resources/application.properties
@@ -6,7 +6,7 @@ mosip.registration.processor.application.version=1.0
 vid.create.id=mosip.vid.create
 resident.vid.version=v1
 resident.vid.id=mosip.resident.vid
-
+auth.type.status.id=mosip.identity.authtype.status.update
 mosip.primary-language=eng
 mosip.secondary-language=fra
 mosip.notification.language-type=both
