--- a/pre-registration/pre-registration-notification-service/src/main/resources/bootstrap.properties
+++ b/pre-registration/pre-registration-notification-service/src/main/resources/bootstrap.properties
@@ -1,12 +1,12 @@
-#spring.cloud.config.uri=localhost
-#spring.cloud.config.label=master
-#spring.cloud.config.name=pre-registration
-#spring.application.name=pre-registration-notification-service
-#spring.profiles.active=dev
-#management.endpoint.health.show-details=always
-#management.endpoints.web.exposure.include=info,health,refresh
-#
-#server.servlet.context-path=/preregistration/v1/notification
-#
-#server.port=9099
-#mosip.pre-registration.notification.id.send=mosip.pre-registration.notification.notify
+spring.cloud.config.uri=localhost
+spring.cloud.config.label=master
+spring.cloud.config.name=pre-registration
+spring.application.name=pre-registration-notification-service
+spring.profiles.active=dev
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=info,health,refresh
+
+server.servlet.context-path=/preregistration/v1/notification
+
+server.port=9099
+mosip.pre-registration.notification.id.send=mosip.pre-registration.notification.notify
