MOS-29674: docker file fix
Former-commit-id: b3f8c81608f8228c42a25dfcb73c128b5406aa2e
Former-commit-id: cee5ffe2859fd1aa0de36d16bf11b4a65a5e72e7

--- a/pre-registration/pre-registration-notification-service/Dockerfile
+++ b/pre-registration/pre-registration-notification-service/Dockerfile
@@ -23,6 +23,8 @@ ENV spring_config_url_env=${spring_config_url}
 
 copy ./target/pre-registration-notification-service-*.jar pre-registration-notification-service.jar
 
+ADD http://13.71.87.138:8040/artifactory/libs-release-local/io/mosip/kernel/kernel-ref-idobjectvalidator/0.9.1/kernel-ref-idobjectvalidator-0.9.1.jar kernel-ref-idobjectvalidator-0.9.1.jar
+
 EXPOSE 9099
 
 CMD if [ "$active_profile_env" = "preprod" ]; then \
