MOS-30437 unit test for the audit change
Former-commit-id: ef5644c923a66844fbbf2e6f0d5222d082feda31
Former-commit-id: 14ee10e1e3d766844dce9e891b30a22e33650535

--- a/kernel/kernel-masterdata-service/src/test/resources/bootstrap.properties
+++ b/kernel/kernel-masterdata-service/src/test/resources/bootstrap.properties
@@ -43,4 +43,4 @@ mosip.role.id-authentication=ID_AUTHENTICATION
 mosip.role.test=TEST
 
 auth.server.validate.url=http://localhost:8080/validateToken
-
+mosip.kernel.masterdata.audit-url=https://dev.mosip.io/v1/auditmanager/audits
