MOS-000 props reverted
Former-commit-id: 535ee5992015d6689402681d61cc3bd6bd8785c8
Former-commit-id: a14c959f86edbc9c500da7f5981d388b074c5ec3

--- a/kernel/kernel-vidgenerator-service/src/main/resources/application-local.properties
+++ b/kernel/kernel-vidgenerator-service/src/main/resources/application-local.properties
@@ -1,7 +1,13 @@
-javax.persistence.jdbc.driver=org.postgresql.Driver
-hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
+# In Memory DB For Test
+#--------------------------------------
+javax.persistence.jdbc.driver=org.h2.Driver
+vid_database_url=jdbc:h2\:mem\:testdb;DB_CLOSE_DELAY=-1;INIT=CREATE SCHEMA IF NOT EXISTS KERNEL
+vid_database_username=sa
+vid_database_password=
+
+hibernate.hbm2ddl.auto=create-drop
 hibernate.jdbc.lob.non_contextual_creation=true
-hibernate.hbm2ddl.auto=none
+hibernate.dialect=org.hibernate.dialect.H2Dialect
 hibernate.show_sql=false
 hibernate.format_sql=false
 hibernate.connection.charSet=utf8
@@ -9,12 +15,9 @@ hibernate.cache.use_second_level_cache=false
 hibernate.cache.use_query_cache=false
 hibernate.cache.use_structured_entries=false
 hibernate.generate_statistics=false
-spring.datasource.initialization-mode=always
 hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
 
-vid_database_url=jdbc:postgresql://104.211.208.136:9001/mosip_kernel
-vid_database_username=kerneluser
-vid_database_password=Mosip@dev123
+
 
 
 auth.server.validate.url=https://dev.mosip.io/v1/authmanager/authorize/validateToken
@@ -82,13 +85,13 @@ mosip.kernel.crypto.sign-algorithm-name=SHA512withRSA
 
 
 #minimum threshold of unused vid
-mosip.kernel.vid.min-unused-threshold=100000
+mosip.kernel.vid.min-unused-threshold=5
 #number of vids to generate
-mosip.kernel.vid.vids-to-generate=200000
-#time to renew after expiry(in days)
+mosip.kernel.vid.vids-to-generate=10
+#time to renew after expiry(in month)
 mosip.kernel.vid.time-to-renew-after-expiry=5
 #for genaration on init vids timeout 
-mosip.kernel.vid.pool-population-timeout=10000000
+mosip.kernel.vid.pool-population-timeout=1000000
 
 
 
@@ -105,8 +108,3 @@ kernel.vid.revoke-scheduler-days_of_month=*
 kernel.vid.revoke-scheduler-months=*
 #schedular weeks configuration
 kernel.vid.revoke-scheduler-days_of_week=*
-
-
-server.port=8080
-server.servlet.path=/v1/pridgenerator
-
