MOS-30154 added testcases for packetstatus
Former-commit-id: 9e6145993115262b53f5f43aa6f2436e516331cd
Former-commit-id: 43c5d38e56f41cc1d8ce87e356e18e814c210eb9

--- a/admin/admin-service/src/main/resources/application-local.properties
+++ b/admin/admin-service/src/main/resources/application-local.properties
@@ -183,8 +183,8 @@ mosip.admin.resource.buttons = Add Center,Activate,Deactivate
 mosip.admin.resource.actions = Activate,Decommision,Users,Machines,Devices,Edit
 mosip.admin.resource.pages = 5,10,15,20,25,30,35,40,45,50
 
-mosip.kernel.packet-status-update-url=https://qa.mosip.io/registrationprocessor/v1/registrationtransaction/search
-mosip.kernel.zone-validation-url=http://localhost:8086/v1/masterdata/zones/authorize
+mosip.kernel.packet-status-update-url=https://dev.mosip.io/registrationprocessor/v1/registrationtransaction/search
+mosip.kernel.zone-validation-url=https://dev.mosip.io/v1/masterdata/zones/authorize
 mosip.kernel.registrationcenterid.length=5
 
 
