MOS-30154 config refactoring
Former-commit-id: c8851dd7c5094b2fa21f3749215467bd974f4cc2
Former-commit-id: 5648974f2875033e4af4a97e29e62f7086f8d721

--- a/admin/admin-service/src/main/resources/application-local.properties
+++ b/admin/admin-service/src/main/resources/application-local.properties
@@ -186,6 +186,9 @@ mosip.admin.resource.pages = 5,10,15,20,25,30,35,40,45,50
 mosip.kernel.packet-status-update-url=https://dev.mosip.io/registrationprocessor/v1/registrationtransaction/search
 mosip.kernel.zone-validation-url=https://dev.mosip.io/v1/masterdata/zones/authorize
 mosip.kernel.registrationcenterid.length=5
+masterdata_database_url=jdbc:postgresql://104.211.202.203:9001/mosip_master
+masterdata_database_username=masteruser
+masterdata_database_password=Mosip@dev123
 
 
 
