MOS-30480 : fixed the issue
Former-commit-id: b0a5a11cdecb99bb4779ca7efbfdc8653f367016
Former-commit-id: c4c594a5affcaf3ae2f9318efb56929bcb6d4b35

--- a/pre-registration/pre-registration-demographic-service/src/test/resources/application.properties
+++ b/pre-registration/pre-registration-demographic-service/src/test/resources/application.properties
@@ -185,3 +185,9 @@ mosip.kernel.crypto.hash-symmetric-key-length=256
 mosip.kernel.crypto.hash-iteration=100000
 #Sign algo name
 mosip.kernel.crypto.sign-algorithm-name=SHA512withRSA
+mosip.batch.token.authmanager.url= https://dev.mosip.io/v1/authmanager/authenticate/useridPwd
+mosip.batch.token.authmanager.appId=ida 
+mosip.batch.token.authmanager.userName=110005 
+mosip.batch.token.authmanager.password=mosip
+mosip.batch.token.request.id=mosip.io.doc.id
+version=1.0
