MOS-30418 added the response Dto , Auth-adapter-handler-POST, AuthFilter-admin
Former-commit-id: a6451599a547cd4498003088f8f8c70bfdbfde4a
Former-commit-id: 90d3a32e15d61c5fa082c657ff59ca272722f429

--- a/admin/admin-service/src/main/resources/bootstrap.properties
+++ b/admin/admin-service/src/main/resources/bootstrap.properties
@@ -3,7 +3,7 @@
 #spring.cloud.config.label=0.12.0
 spring.cloud.config.name=admin
 spring.application.name=admin-service
-#spring.profiles.active=dev
+spring.profiles.active=local
 #management.security.enabled=false
 #management.endpoint.health.show-details=when-authorized
 #management.endpoints.web.exposure.include=*
@@ -18,10 +18,12 @@ management.endpoints.web.exposure.include=info,health,refresh
 server.port=8098
 server.servlet.path=/v1/admin
 
-#javax.persistence.jdbc.url=jdbc:postgresql://104.211.208.136:9001/mosip_master
-#javax.persistence.jdbc.user=masteruser
-#javax.persistence.jdbc.password=Mosip@dev123
+javax.persistence.jdbc.url=jdbc:postgresql://104.211.208.136:9001/mosip_master
+javax.persistence.jdbc.user=masteruser
+javax.persistence.jdbc.password=Mosip@dev123
 
 #disabling health check so that client doesnt try to load properties from sprint config server every
 # 5 minutes (should not be done in production)
 health.config.enabled=false
+
+auth.server.validate.url=https://dev.mosip.io/v1/authmanager/authorize/validateToken
