--- a/admin/admin-service/src/test/resources/application-test.properties
+++ b/admin/admin-service/src/test/resources/application-test.properties
@@ -262,3 +262,5 @@ mosip.admin.packetstatus.api.packetId=mosip.registration.status
 mosip.kernel.packet-status-update-url=https://qa.mosip.io/registrationprocessor/v1/registrationtransaction/search
 mosip.kernel.zone-validation-url=http://localhost:8086/v1/masterdata/zones/authorize
 mosip.kernel.registrationcenterid.length=5
+
+mosip.kernel.audit.manager.api=https://dev.mosip.io/v1/auditmanager/audits
