--- a/admin/admin-service/src/main/resources/application-local.properties
+++ b/admin/admin-service/src/main/resources/application-local.properties
@@ -3,6 +3,10 @@ auth.server.user-register-url=https://dev.mosip.io/v1/authmanager/user
 mosip.kernel.emailnotifier-url=https://dev.mosip.io/v1/emailnotifier/email/send
 auth.server.sendotp-url=https://dev.mosip.io/v1/authmanager/authenticate/sendotp
 auth.server.user-add-password-url=https://dev.mosip.io/v1/authmanager/user/addpassword
+mosip.kernel.audit.manager.api=https://dev.mosip.io/v1/auditmanager/audits
+
+auth.server.validate.url=https://dev.mosip.io/v1/authmanager/authorize/validateToken
+auth.server.admin.validate.url=https://dev.mosip.io/v1/authmanager/authorize/validateToken
 
 mosip.admin-appid=admin
 mosip.admin.app-id=admin
@@ -42,8 +46,6 @@ mosip.kernel.syncdata.syncdata-version-id=v1.0
 
 mosip.kernel.signature.cryptomanager-encrypt-url=https://dev.mosip.io/v1/cryptomanager/private/encrypt
 
-
-auth.server.validate.url=https://qa.mosip.io/v1/authmanager/authorize/validateToken
 auth.server.refreshToken.url=https://qa.mosip.io/v1/authmanager/authorize/refreshToken
 auth.role.prefix=ROLE_
 auth.header.name=Authorization
