--- a/id-repository/id-repository-identity-service/src/main/resources/bootstrap.properties
+++ b/id-repository/id-repository-identity-service/src/main/resources/bootstrap.properties
@@ -1,5 +1,5 @@
 spring.cloud.config.uri=http://104.211.212.28:51000/
-spring.cloud.config.label=feature-MOS-29093-IDA_BIO_SDK_INTEG
+spring.cloud.config.label=master
 spring.cloud.config.name=id-repository
 spring.application.name=id-repository
 spring.profiles.active=dev
