MOS-30303 : added resident role
Former-commit-id: 0afe8d7a4f00128b26e768bc0156f220b0364e60
Former-commit-id: f4a7451e1520769332d0990bef097ab04eb16cc7

--- a/registration-processor/pre-processor/registration-processor-request-handler-service/pom.xml
+++ b/registration-processor/pre-processor/registration-processor-request-handler-service/pom.xml
@@ -141,6 +141,11 @@
 			<artifactId>registration-processor-core</artifactId>
 			<version>${registration.processor.core.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>io.mosip.kernel</groupId>
+			<artifactId>kernel-auth-adapter</artifactId>
+			<version>${kernel.core.version}</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
