--- a/kernel/kernel-keymanager-service/src/main/resources/application-local.properties
+++ b/kernel/kernel-keymanager-service/src/main/resources/application-local.properties
@@ -1,6 +1,6 @@
 #mosip.kernel.keymanager.softhsm.config-path=/config/softhsm-application.conf
 
-mosip.kernel.keymanager.softhsm.config-path=D\:\\softhsm2\\etc\\softhsm2-demo.conf
+mosip.kernel.keymanager.softhsm.config-path=B\:\\softhsm2\\etc\\softhsm2-demo.conf
 mosip.kernel.keymanager.softhsm.keystore-type=PKCS11
 mosip.kernel.keymanager.softhsm.keystore-pass=1234
 
@@ -22,10 +22,7 @@ mosip.kernel.keygenerator.symmetric-algorithm-name=AES
 mosip.kernel.keygenerator.asymmetric-key-length=2048
 #Symmetric algorithm key length
 mosip.kernel.keygenerator.symmetric-key-length=256
-#Keygenerator symmetric algorithm name
-mosip.kernel.keygenerator.symmetric-algorithm-name=AES
-# keygenerator asymmetric algorithm name
-mosip.kernel.keygenerator.asymmetric-algorithm-name=RSA
+
 #Encrypted data and encrypted symmetric key separator
 mosip.kernel.data-key-splitter=#KEY_SPLITTER#
 #GCM tag length
@@ -39,12 +36,11 @@ mosip.kernel.crypto.hash-iteration=100000
 #Sign algo name
 mosip.kernel.crypto.sign-algorithm-name=SHA512withRSA
 
-# DB Properties For Development
---------------------------------------
+
 javax.persistence.jdbc.driver=org.postgresql.Driver
-javax.persistence.jdbc.url=jdbc:postgresql://104.211.208.136:9001/mosip_kernel
-javax.persistence.jdbc.user=kerneluser
-javax.persistence.jdbc.password=Mosip@dev123
+javax.persistence.jdbc.url=jdbc:postgresql://localhost:9001/mosip_kernel
+javax.persistence.jdbc.user=postgres
+javax.persistence.jdbc.password=root
 hibernate.hbm2ddl.auto=none
 hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 hibernate.jdbc.lob.non_contextual_creation=true
@@ -57,9 +53,11 @@ hibernate.cache.use_structured_entries=false
 hibernate.generate_statistics=false
 hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
 
-auth.server.validate.url=https://dev.mosip.io/v1/authmanager/authorize/validateToken
+auth.server.validate.url=https://dev.mosip.io/v1/authmanager/authorize/admin/validateToken
 auth.role.prefix=ROLE_
 auth.header.name=Authorization
+
+mosip.kernel.pdf_owner_password=PDFADMIN
 
 
 
