MOS-30425 documentation added
Former-commit-id: 098a282bd440c2716a5e9756907ac78ee5204dbd
Former-commit-id: 9d68d9fe740196a6681272a04f1e25a39b471fb5

--- a/kernel/kernel-pdfgenerator-itext/pom.xml
+++ b/kernel/kernel-pdfgenerator-itext/pom.xml
@@ -42,5 +42,10 @@
 			<artifactId>bcprov-jdk15on</artifactId>
 			<version>${bouncycastle.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcpkix-jdk15on</artifactId>
+			<version>${bouncycastle.version}</version>
+		</dependency>
 	</dependencies>
 </project>
