MOS-29674: AuthtokenUtil is moved to core
Former-commit-id: f5072d010e716cad63366f05679ce05ad3f6a3f0
Former-commit-id: 7af226868f1121957caba25613aa3610f46693be

--- a/pre-registration/pre-registration-booking-service/src/test/resources/application.properties
+++ b/pre-registration/pre-registration-booking-service/src/test/resources/application.properties
@@ -143,3 +143,9 @@ mosip.kernel.prid.restricted-numbers=786,666
 
 mosip.kernel.virus-scanner.host=104.211.200.46
 mosip.kernel.virus-scanner.port=3310
+mosip.batch.token.authmanager.url= https://dev.mosip.io/v1/authmanager/authenticate/useridPwd
+mosip.batch.token.authmanager.appId=ida 
+mosip.batch.token.authmanager.userName=110005 
+mosip.batch.token.authmanager.password=mosip
+mosip.batch.token.request.id=mosip.io.doc.id
+version=1.0
