--- a/pre-registration/pre-registration-demographic-service-impl/src/test/resources/application.properties
+++ b/pre-registration/pre-registration-demographic-service-impl/src/test/resources/application.properties
@@ -33,7 +33,7 @@ application.id=pre-registration
 
 document.service.ip=localhost
 document.service.port=9093
-document.service.version=v0.1
+document.service.version=1.0
 resource.url=${qa.dns.url}/v1.0/pre-registration/registration/deleteAllByPreRegId
 appointmentResourse.url=${qa.dns.url}/preregistration/v1/appointmentDetails
 emailResourse.url=${dev.dns.url}/emailnotifier/v1.0/email/send
@@ -226,7 +226,7 @@ mosip.kernel.fsadapter.hdfs.user-pass=Mosip@dev123
 # HDFS log level. Change this to debug to see hdfs logs
 logging.level.org.apache.hadoop=warn
 
-demographic.service.version=v0.1
+demographic.service.version=1.0
 demographic.service.env=demographic
 swagger.dns.url=http://localhost
 dev.dns.url=https://dev.mosip.io
@@ -298,13 +298,13 @@ preregistration.cancel.timespan = 24
 preregistration.timespan.cancel=24
 preregistration.timespan.rebook=24
 
-service.version=v1.0
+service.version=1.0
 master.service.env=masterdata
 demographic.service.env=demographic
-demographic.service.version=v0.1
+demographic.service.version=1.0
 
 document.service.env=demographic
-document.service.version=v0.1
+document.service.version=1.0
 
 int.dns.url=http://localhost:8086
 dev.dns.url=https://dev.mosip.io
