--- a/pre-registration/pre-registration-notification-service/src/test/resources/application.properties
+++ b/pre-registration/pre-registration-notification-service/src/test/resources/application.properties
@@ -329,3 +329,9 @@ mosip.kernel.prid.not-start-with=0,1
 
 #restricted numbers for prid
 mosip.kernel.prid.restricted-numbers=786,666
+mosip.batch.token.authmanager.url= https://dev.mosip.io/v1/authmanager/authenticate/useridPwd
+mosip.batch.token.authmanager.appId=ida 
+mosip.batch.token.authmanager.userName=110005 
+mosip.batch.token.authmanager.password=mosip
+mosip.batch.token.request.id=mosip.io.doc.id
+version=1.0
