--- a/pre-registration/pre-registration-translitration-service/src/test/resources/application.properties
+++ b/pre-registration/pre-registration-translitration-service/src/test/resources/application.properties
@@ -57,3 +57,9 @@ mosip.kernel.idobjectvalidator.masterdata.documenttypes.rest.uri=https://dev.mos
 mosip.kernel.masterdata.validdoc.rest.uri==https://dev.mosip.io/masterdata/validdocuments/
 
 mosip.pre-registration.transliteration.id.transliterate=mosip.pre-registration.transliteration.transliterate
+mosip.batch.token.authmanager.url= https://dev.mosip.io/v1/authmanager/authenticate/useridPwd
+mosip.batch.token.authmanager.appId=ida 
+mosip.batch.token.authmanager.userName=110005 
+mosip.batch.token.authmanager.password=mosip
+mosip.batch.token.request.id=mosip.io.doc.id
+version=1.0
