code clean up part3
Former-commit-id: 17a3f8a51af747e7f0c02d259895480df6f1c972
Former-commit-id: ef230920a913e5aed25a3abd2ab6f743538f72cd

--- a/kernel/kernel-crypto-signature/src/test/resources/application.properties
+++ b/kernel/kernel-crypto-signature/src/test/resources/application.properties
@@ -35,3 +35,4 @@ mosip.signed.response.header=response-signature
 mosip.kernel.keymanager-service-sign-url=https://dev.mosip.io/v1/cryptomanager/private/encrypt
 mosip.kernel.keymanager-service-publickey-url=https://dev.mosip.io/v1/keymanager/publickey/{applicationId}
 auth.server.validate.url=http://localhost:8091/v1.0/authorize/validateToken
+auth.server.admin.validate.url=http://localhost:8091/v1/authmanager/authorize/admin/validateToken
