MOS-29369 - updated idrepo
Former-commit-id: b22df37c3ca3043d9f76d256eff1b2bc970aa3b8
Former-commit-id: 4ff59ebe5045f5bf1b3ffaca8527f0142da6d17f

--- a/id-repository/id-repository-core/pom.xml
+++ b/id-repository/id-repository-core/pom.xml
@@ -20,7 +20,7 @@
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-auth-adapter</artifactId>
-			<version>0.9.1</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
