MOS-30429: validation in progress message has been added Former-commit-id: c4a0c1721ac4e6f36d1ad4ff9a22aae3a8b8650e Former-commit-id: 02b25e339f330f4253b1bd09acfad13569c603e8

--- a/registration/registration-services/pom.xml
+++ b/registration/registration-services/pom.xml
@@ -28,6 +28,12 @@
 			<scope>system</scope>
 		</dependency>	
  -->
+ 
+ 	<dependency>
+			<groupId>io.mosip.kernel</groupId>
+			<artifactId>kernel-bioapi-provider </artifactId>
+			<version>0.10.0</version>
+		</dependency>
 		<!-- JUnit -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -362,6 +368,10 @@
 			<artifactId>kernel-bioapi-provider </artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>io.mosip.kernel</groupId>
+			<artifactId>kernel-pdfgenerator-itext</artifactId>
+		</dependency>
 	</dependencies>
 
 	<repositories>
