swagger fixes for masterdata
Former-commit-id: c15e1bea748cf3859309983c98a3ce0fc908c9b2
Former-commit-id: c03c528d3181eacefa57a970d453cbb011a6482d

--- a/kernel/kernel-core/pom.xml
+++ b/kernel/kernel-core/pom.xml
@@ -100,6 +100,11 @@
 			<artifactId>swagger-annotations</artifactId>
 			<version>${swagger.annotations.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>io.swagger</groupId>
+			<artifactId>swagger-models</artifactId>
+			<version>${swagger.annotations.version}</version>
+		</dependency>
 	</dependencies>
 
 
