--- a/kernel/kernel-masterdata-service/src/main/resources/bootstrap.properties
+++ b/kernel/kernel-masterdata-service/src/main/resources/bootstrap.properties
@@ -1,6 +1,6 @@
 #spring.cloud.config.uri=http://104.211.212.28:51000
 #spring.cloud.config.label=master
-#spring.profiles.active=dev
+spring.profiles.active=local
 refs/remotes/origin/master
 spring.cloud.config.name=kernel
 spring.application.name=kernel-masterdata-service
