Build Clean fix
Former-commit-id: d5166cfa82b03d3cb2b9a6139e4b1480f4a14a78
Former-commit-id: 40f467110ba01a0a2595fee23f6649067af239d2

--- a/admin/admin-service/src/test/resources/application-test.properties
+++ b/admin/admin-service/src/test/resources/application-test.properties
@@ -264,3 +264,4 @@ mosip.kernel.zone-validation-url=http://localhost:8086/v1/masterdata/zones/autho
 mosip.kernel.registrationcenterid.length=5
 
 mosip.kernel.audit.manager.api=https://dev.mosip.io/v1/auditmanager/audits
+mosip.kernel.masterdata.audit-url=https://dev.mosip.io/v1/auditmanager/audits
