--- a/kernel/kernel-auth-service/src/main/resources/bootstrap.properties
+++ b/kernel/kernel-auth-service/src/main/resources/bootstrap.properties
@@ -1,6 +1,6 @@
 #spring.cloud.config.uri=http://104.211.212.28:51000
 #spring.cloud.config.label=0.12.0
-spring.profiles.active=local
+#spring.profiles.active=local
 spring.cloud.config.name=kernel
 spring.application.name=kernel-auth-service
 #management.security.enabled=false
