--- a/kernel/kernel-pridgenerator-service/src/main/resources/bootstrap.properties
+++ b/kernel/kernel-pridgenerator-service/src/main/resources/bootstrap.properties
@@ -1,8 +1,8 @@
-spring.cloud.config.uri=localhost
-spring.cloud.config.label=master
+#spring.cloud.config.uri=localhost
+#spring.cloud.config.label=master
 spring.cloud.config.name=kernel
 spring.application.name=kernel-pridgenerator-service
-spring.profiles.active=dev
+#spring.profiles.active=dev
 management.endpoints.web.exposure.include=refresh
 #management.security.enabled=false
 server.port=8100
