Device register fixes
Former-commit-id: 96ce5081d5aee64ebf53b420752b90d1ce64d5a6
Former-commit-id: e68371edfe20cf73e5e94c38274137832788993e

--- a/kernel/kernel-masterdata-service/src/main/resources/application-local.properties
+++ b/kernel/kernel-masterdata-service/src/main/resources/application-local.properties
@@ -40,3 +40,5 @@ auth.server.validate.url=https://dev.mosip.io/v1/authmanager/authorize/admin/val
 auth.server.admin.validate.url=https://dev.mosip.io/v1/authmanager/authorize/admin/validateToken
 
 master.search.maximum.rows=50
+
+mosip.kernel.masterdata.audit-url=https://dev.mosip.io/v1/auditmanager/audits
