Adding JMX parameter
Former-commit-id: 9a7559c91a7eec5f43027aa527213813ac45bca6
Former-commit-id: 99e2d2ca672d1a1284c15bb9478a1d7e1f6185fb

--- a/kernel/kernel-keymanager-service/Dockerfile_DO_NOT_BUILD
+++ b/kernel/kernel-keymanager-service/Dockerfile_DO_NOT_BUILD
@@ -40,6 +40,7 @@ COPY ./target/kernel-keymanager-service-*.jar kernel-keymanager-service.jar
 VOLUME /softhsm
 
 EXPOSE 8088
+EXPOSE 9010
 
 CMD if [ "$is_glowroot_env" = "present" ]; then \
     wget "${artifactory_url_env}"/artifactory/libs-release-local/io/mosip/testing/glowroot.zip ; \
